--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="container">
-            <h1 id="container-value">0</h1>
-            <button id="Decrement-btn">Decrement</button>
-            <button id="Increment-btn">Increment</button>
+            <h1 id="Container_value">0</h1>
+            <button id="Decrement_btn">Decrement</button>
+            <button id="Increment_btn">Increment</button>
         </div>
         <script src="script.js"></script>
     </body>
