make direction change

--- a/first/index.html
+++ b/first/index.html
@@ -11,6 +11,7 @@
             <h1 id="Container_value">0</h1>
             <button id="Decrement_btn">Decrement</button>
             <button id="Increment_btn">Increment</button>
+            <button id="Reset_btn">Reset</button>
         </div>
         <script src="script.js"></script>
     </body>
