--- a/ToDoLisst/index.html
+++ b/ToDoLisst/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>My ToDo List</h1>
-        <input type="text" , id="new_todo_input" , placeholder="Add a new task ...">
-        <button id="add_todo_button">Add</button>
-        <ul id="task_list">
-
-        </ul>
+    <div>
+        <div class="container">
+            <h1>My ToDo List</h1>
+            <input type="text" , id="new_todo_input" , placeholder="Add a new task ...">
+            <button id="add_todo_button">Add</button>
+        
+        </div>
+        <div class="display">
+            <ul id="task_list">
+            </ul>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
