--- a/ToDoLisst/index.html
+++ b/ToDoLisst/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <div>
+        <div class = "get_user">
+            <h1>Welcome to the To-Do List App</h1>
+            <p>Please enter your name:</p>
+            <input type="text" id="user_name_input" placeholder="Enter your name">
+            <button id="start_button">Start</button>
+        </div>
         <div class="container">
             <h1>My ToDo List</h1>
             <input type="text" , id="new_todo_input" , placeholder="Add a new task ...">
