add get name section

--- a/ToDoLisst/index.html
+++ b/ToDoLisst/index.html
@@ -15,7 +15,7 @@
             <button id="start_button">Start</button>
         </div>
         <div class="container">
-            <h1>My ToDo List</h1>
+            <h1 id="demo"></h1>
             <input type="text" , id="new_todo_input" , placeholder="Add a new task ...">
             <button id="add_todo_button">Add</button>
         
